--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
     <title>Achint Tyagi</title>
 
     <!-- FAVICON  -->
-    <link href="https://fonts.googleapis.com/css2?family=Rowdies&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="Assests/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Assests/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Assests/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="Assests/favicon_io/site.webmanifest">
 
     <!-- FONTS   -->
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Rowdies&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap" rel="stylesheet">
@@ -25,10 +24,10 @@
     <!-- ICONS  -->
     <script src="https://kit.fontawesome.com/bf027e9367.js" crossorigin="anonymous"></script>
     <!-- CSS  -->
-    <link rel="stylesheet" href="CSS/index.css">
-    <link rel="stylesheet" href="CSS/leftContent.css">
-    <link rel="stylesheet" href="CSS/candle.css">
-    <link rel="stylesheet" href="CSS/mainContent.css">
+    <link rel="stylesheet" href="Assests/CSS/candle.css">
+    <link rel="stylesheet" href="Assests/CSS/style.css">
+    <link rel="stylesheet" href="Assests/CSS/leftContent.css">
+    <link rel="stylesheet" href="Assests/CSS/mainContent.css">
 </head>
 
 <body>
@@ -63,7 +62,7 @@
         <div class="profileContent">
             <div class=" box"></div>
             <div class="box2"></div>
-            <div class="img" style="background-image: url(Images/Achint.jpg);"></div>
+            <div class="img" style="background-image: url(Assests/Images/Achint.jpg);"></div>
             <div class="profileCon">
                 <h4>Hey <span class="wave"> 👋 </span>&nbsp; I am</h4>
                 <h2>Achint </h2>
@@ -121,37 +120,42 @@
                     problem-solving skills, adaptability, and learning agility.</h2>
                 <div class="social">
                     <a href="https://www.linkedin.com/in/achint-tyagi/" target="_blank"><img
-                            src="Images/001-linkedin.png"></a>
-                    <a href="https://twitter.com/achinttyagi2001" target="_blank"><img src="Images/002-twitter.png"></a>
-                    <a href="https://github.com/tyagi-achint" target="_blank"> <img src="Images/003-github.png"></a>
+                            src="Assests/Images/001-linkedin.png"></a>
+                    <a href="https://twitter.com/achinttyagi2001" target="_blank"><img
+                            src="Assests/Images/002-twitter.png"></a>
+                    <a href="https://github.com/tyagi-achint" target="_blank"> <img
+                            src="Assests/Images/003-github.png"></a>
                     <a href="https://in.pinterest.com/achinttyagi/" target="_blank"><img
-                            src="Images/004-pinterest.png"></a>
+                            src="Assests/Images/004-pinterest.png"></a>
                 </div>
             </div>
             <div class="about">
                 <p class="headings">About</p>
                 <hr class="textUnderline">
                 <div class="aboutData">
-                    <h2>A passionate frontend developer 👨‍💻 from India <img src="Images/004-india.png"></h2>
+                    <h2>A passionate frontend developer 👨‍💻 from India <img src="Assests/Images/004-india.png"></h2>
                     <ul>
-                        <li>- <img src="Images/006-talking.png"> I Speak <b><i>English, Hindi.</i></b></li>
-                        <li>- <img src="Images/005-reading.png"> I’m currently learning <b><i>ReactJS, Python.</i></b>
+                        <li>- <img src="Assests/Images/006-talking.png"> I Speak <b><i>English, Hindi.</i></b></li>
+                        <li>- <img src="Assests/Images/005-reading.png"> I’m currently learning <b><i>ReactJS,
+                                    Python.</i></b>
                         </li>
-                        <li> - <img src="Images/003-collaboration.png"> I’m looking to collaborate in <b> <i>any area
+                        <li> - <img src="Assests/Images/003-collaboration.png"> I’m looking to collaborate in <b> <i>any
+                                    area
                                     related to Web-Development.</i></b></li>
-                        <li>- <img src="Images/002-helping.png"> I’m looking for help with <b><i>Learning
+                        <li>- <img src="Assests/Images/002-helping.png"> I’m looking for help with <b><i>Learning
                                     Back-end.</i></b>
                         </li>
 
 
-                        <li> - <img src="Images/001-ask.png"> Ask me about <b>Front-end, Designing.</i></b></li>
+                        <li> - <img src="Assests/Images/001-ask.png"> Ask me about <b>Front-end, Designing.</i></b></li>
 
-                        <li> - <img src="Images/007-fun-fact.png"> Fun fact <span class="funFact">I think I am creative
+                        <li> - <img src="Assests/Images/007-fun-fact.png"> Fun fact <span class="funFact">I think I am
+                                creative
                                 with
                                 colors.</span></li>
                     </ul>
 
-                    <img src="Images/hire.png" width="37px">
+                    <img src="Assests/Images/hire.png" width="37px">
                     <span>I’m available for a freelance job.</span>
                     <a href="#contact">Hire me
                     </a>
@@ -165,7 +169,7 @@
                     <div class="col">
                         <div class="item">
                             <div class="item-name">
-                                <img src="Images/004-python.png">
+                                <img src="Assests/Images/004-python.png">
                                 <h5>Python</h5>
                             </div>
                             <div class="skill-progress">
@@ -177,7 +181,7 @@
                     <div class="col">
                         <div class="item">
                             <div class="item-name">
-                                <img src="Images/002-javascript.png">
+                                <img src="Assests/Images/002-javascript.png">
                                 <h5>JavaScript</h5>
                             </div>
                             <div class="skill-progress">
@@ -189,7 +193,7 @@
                     <div class="col">
                         <div class="item">
                             <div class="item-name">
-                                <img src="Images/006-java.png">
+                                <img src="Assests/Images/006-java.png">
                                 <h5>Java</h5>
                             </div>
                             <div class="skill-progress">
@@ -201,7 +205,7 @@
                     <div class="col">
                         <div class="item">
                             <div class="item-name">
-                                <img src="Images/008-react.png">
+                                <img src="Assests/Images/008-react.png">
                                 <h5>ReactJS</h5>
                             </div>
                             <div class="skill-progress">
@@ -213,7 +217,7 @@
                     <div class="col">
                         <div class="item">
                             <div class="item-name">
-                                <img src="Images/005-html-5.png">
+                                <img src="Assests/Images/005-html-5.png">
                                 <h5>HTML</h5>
                             </div>
                             <div class="skill-progress">
@@ -225,7 +229,7 @@
                     <div class="col">
                         <div class="item">
                             <div class="item-name">
-                                <img src="Images/003-css-3.png">
+                                <img src="Assests/Images/003-css-3.png">
                                 <h5>CSS</h5>
                             </div>
                             <div class="skill-progress">
@@ -237,7 +241,7 @@
                     <div class="col">
                         <div class="item">
                             <div class="item-name">
-                                <img src="Images/001-bootstrap.png">
+                                <img src="Assests/Images/001-bootstrap.png">
                                 <h5>Bootstrap</h5>
                             </div>
                             <div class="skill-progress">
@@ -249,7 +253,7 @@
                     <div class="col">
                         <div class="item">
                             <div class="item-name">
-                                <img src="Images/007-wordpress.png">
+                                <img src="Assests/Images/007-wordpress.png">
                                 <h5>WordPress</h5>
                             </div>
                             <div class="skill-progress">
@@ -271,7 +275,7 @@
         </div>
     </div>
     <div class="cursor"></div>
-    <script src="index.js"></script>
+    <script src="Assests/script.js"></script>
 </body>
 
 </html>
