--- a/index.html
+++ b/index.html
@@ -235,13 +235,15 @@
                             </ul>
                             <div class="extraInfo">
                                 <p class="headings">What I can do?</p>
-                                <h5 style="word-spacing: 5px;opacity:.8; font-size:small;margin-bottom:5%">
+                                <h5
+                                    style="letter-spacing: 2px;word-spacing:5px;opacity:.8;font-size:small;margin-bottom:5%">
                                     I am a Front-end web developer, who can design beautiful and attractive website with
                                     HTML, CSS,
                                     JavaScript, with decent knowledge of colour for making Websites Templates.
                                 </h5>
                                 <p class="headings"> What am I doing currently?</p>
-                                <h5 style="word-spacing: 5px;opacity:.8; font-size:small;margin-bottom:5%">
+                                <h5
+                                    style="letter-spacing: 2px;word-spacing:5px;opacity:.8;font-size:small;margin-bottom:5%">
                                     Currently persuing my Masters in Computer Application and learning new programming
                                     languages like Java, Python, ReactJS, MySQL, PHP and seeking role as Front-end
                                     developer.
