--- a/index.html
+++ b/index.html
@@ -537,6 +537,29 @@
                             <li class="card">
                                 <div class="cardData">
                                     <div class="cardImg"
+                                        style="background-image: url(Assests/Images/NotesWebpage.jpg);">
+                                    </div>
+                                    <div class="card-content">
+                                        <p>Notes Wepage</p>
+                                    </div>
+                                    <h3 class="card-title">HTML, CSS & JavaScript</h3>
+                                </div>
+                                <a target="_blank" href="https://tyagi-achint.github.io/OctaNet_June_Task-2/"
+                                    class="card-link">View</a>
+                                <div class="discripition">
+                                    <p>A simple and intuitive note-taking webpage designed to help you stay organized
+                                        and capture your thoughts effortlessly. This webpage is built using a
+                                        combination of JavaScript, HTML, and CSS to provide a seamless and responsive
+                                        user experience.</p>
+                                </div>
+
+
+
+                            </li>
+
+                            <li class="card">
+                                <div class="cardData">
+                                    <div class="cardImg"
                                         style="background-image: url(Assests/Images/PortfolioWebsite.jpg);">
 
                                     </div>
@@ -603,6 +626,29 @@
                                         yourself with various interactive games that will keep you entertained for
                                         hours.
                                     </p>
+                                </div>
+
+
+
+                            </li>
+                            <li class="card">
+                                <div class="cardData">
+                                    <div class="cardImg" style="background-image: url(Assests/Images/LandingPage.jpg);">
+
+                                    </div>
+                                    <div class="card-content">
+                                        <p>Yoga Landing Page</p>
+                                    </div>
+                                    <h3 class="card-title">HTML & CSS</h3>
+
+                                </div>
+                                <a target="_blank" href="https://tyagi-achint.github.io/OctaNet_June_Task-1/"
+                                    class="card-link">View</a>
+                                <div class="discripition">
+                                    <p>Welcome to Yoga, a serene and tranquil online sanctuary dedicated to helping you
+                                        find balance, peace, and vitality through the practice of yoga. My landing
+                                        page, designed using HTML and CSS, invites you to embark on a transformative
+                                        journey towards holistic well-being</p>
                                 </div>
 
 
