--- a/index.html
+++ b/index.html
@@ -398,6 +398,18 @@
                                     <span class="value">60%</span>
                                 </div>
                             </div>
+                            <div class="col">
+                                <div class="item">
+                                    <div class="item-name">
+                                        <img src="Assests/Images/php.png">
+                                        <h5>PhP</h5>
+                                    </div>
+                                    <div class="skill-progress">
+                                        <span class="progres" data-value="55%" style="width: 50%;"></span>
+                                    </div>
+                                    <span class="value">50%</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="experience">
