--- a/index.html
+++ b/index.html
@@ -327,11 +327,11 @@
                             <div class="col">
                                 <div class="item">
                                     <div class="item-name">
-                                        <img src="Assests/Images/006-java.png">
-                                        <h5>Java</h5>
+                                        <img src="Assests/Images/php.png">
+                                        <h5>PhP</h5>
                                     </div>
                                     <div class="skill-progress">
-                                        <span class="progres" data-value="50%" style="width: 50%;"></span>
+                                        <span class="progres" data-value="55%" style="width: 50%;"></span>
                                     </div>
                                     <span class="value">50%</span>
                                 </div>
@@ -396,14 +396,15 @@
                                     <span class="value">60%</span>
                                 </div>
                             </div>
+
                             <div class="col">
                                 <div class="item">
                                     <div class="item-name">
-                                        <img src="Assests/Images/php.png">
-                                        <h5>PhP</h5>
+                                        <img src="Assests/Images/006-java.png">
+                                        <h5>Java</h5>
                                     </div>
                                     <div class="skill-progress">
-                                        <span class="progres" data-value="55%" style="width: 50%;"></span>
+                                        <span class="progres" data-value="50%" style="width: 50%;"></span>
                                     </div>
                                     <span class="value">50%</span>
                                 </div>
@@ -544,6 +545,33 @@
                     <br>
                     <div class="container">
                         <ul class="cards">
+                            <li class="card">
+                                <div class="cardData">
+                                    <div class="cardImg"
+                                        style="background-image: url(Assests/Images/Crowdcanvass.jpg);">
+                                    </div>
+                                    <div class="card-content">
+                                        <p>Forum Website</p>
+                                    </div>
+                                    <h3 class="card-title">HTML, CSS, Php & JavaScript </h3>
+                                </div>
+                                <a target="_blank" href="https://crowdcanvass.rf.gd" class="card-link">View</a>
+                                <div class="discripition">
+                                    <p>Crowdcanvass is an interactive PHP forum website designed for online community
+                                        engagement. It offers features like user authentication, category-based
+                                        discussions, thread creation, question posting, and replies. Users can explore
+                                        diverse topics, ask questions, and participate in meaningful conversations. It's
+                                        a digital platform for knowledge sharing and social interaction, catering to the
+                                        needs of the modern online community.</p>
+                                </div>
+
+
+
+                            </li>
+
+
+
+
                             <li class="card">
                                 <div class="cardData">
                                     <div class="cardImg"
