--- a/index.html
+++ b/index.html
@@ -568,6 +568,31 @@
 
 
                             </li>
+                            <li class="card">
+                                <div class="cardData">
+                                    <div class="cardImg"
+                                        style="background-image: url(Assests/Images/SimpleGamesWebsite.png);">
+
+                                    </div>
+                                    <div class="card-content">
+                                        <p>Games Website</p>
+                                    </div>
+                                    <h3 class="card-title">php & JavaScript</h3>
+
+                                </div>
+                                <a target="_blank" href="https://funtimefillers.rf.gd/" class="card-link">View</a>
+                                <div class="discripition">
+                                    <p>Beat boredom with a captivating website featuring a collection of entertaining
+                                        games
+                                        designed using JavaScript, HTML, and CSS. Dive into a world of fun and challenge
+                                        yourself with various interactive games that will keep you entertained for
+                                        hours.
+                                    </p>
+                                </div>
+
+
+
+                            </li>
 
 
 
@@ -646,17 +671,16 @@
                             <li class="card">
                                 <div class="cardData">
                                     <div class="cardImg"
-                                        style="background-image: url(Assests/Images/SimpleGamesWebsite.jpg);">
+                                        style="background-image: url(Assests/Images/SimpleGamesWebsite.png);">
 
                                     </div>
                                     <div class="card-content">
-                                        <p>Simple Games Website</p>
+                                        <p>Games Website</p>
                                     </div>
-                                    <h3 class="card-title">JavaScript</h3>
+                                    <h3 class="card-title">php & JavaScript</h3>
 
                                 </div>
-                                <a target="_blank" href="https://tyagi-achint.github.io/StrawHats/index.html"
-                                    class="card-link">View</a>
+                                <a target="_blank" href="https://funtimefillers.rf.gd/" class="card-link">View</a>
                                 <div class="discripition">
                                     <p>Beat boredom with a captivating website featuring a collection of entertaining
                                         games
