--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                     <div id="resume">
                         <p class="headings">Resume</p>
                         <hr class="textUnderline">
-                        <a href="Assests/Resume-Achint_Tyagi.pdf" target="_blank">
+                        <a href="Assests/Achint_Tyagi.pdf" target="_blank">
                             <div class="resumebox">
                                 <lord-icon class="resumeIcon" src="https://cdn.lordicon.com/wxgbcyqg.json"
                                     colors="outline:#b8c0d8">
