--- a/index.html
+++ b/index.html
@@ -33,36 +33,7 @@
     <link rel="stylesheet" href="Assests/CSS/extraStyle.css">
 
     <style>
-        #pageNav {
-            position: fixed;
-            padding-top: 2vh;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            z-index: 8;
-            background-color: rgba(255, 255, 255, 0.5);
-        }
 
-
-        .navUl {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-
-        .navUl li {
-            display: inline-block;
-            margin-right: 5vw;
-            font-family: "Bagel Fat One", cursive;
-            font-size: x-large;
-            letter-spacing: 2px;
-
-        }
-
-        #pageNav li a {
-            color: #fff;
-        }
     </style>
 </head>
 
@@ -169,34 +140,45 @@
 
             </div>
         </div>
-
+        <!-- Page Navbar -->
+        <div id="pageNav">
+            <ul class="navUl">
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#resume">Resume</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
 
         <div id="topContainer">
-            <!-- Page Navbar -->
-            <div id="pageNav">
-                <ul class="navUl">
-                    <li><a href="#about" onclick="
-                    togglePanel()">About</a></li>
-                    <li><a href="#projects" onclick="
-                    togglePanel()">Projects</a></li>
-                    <li><a href="#resume" onclick="
-                    togglePanel()">Resume</a></li>
-                    <li><a href="#contact" onclick="
-                    togglePanel()">Contact</a></li>
-                </ul>
-            </div>
+
             <div id="leftContent">
                 <!-- Profile Section -->
                 <div class="profileContent">
-
-                    <div class=" box"></div>
+                    <div class="box"></div>
                     <div class="box2"></div>
-
                     <div class="img" style="background-image: url(Assests/Images/Achint.jpg);"></div>
-                    <h1>Front-end Developer</h1>
+                    <div class="content">
+                        <span class="square-bracket">[</span>
+                        <span class="contText">Front-end Developer</span>
+                        <span class="square-bracket">]</span>
+                    </div>
                 </div>
             </div>
+            <script>
+                const changingText = document.querySelector('#leftContent .contText');
+                const newTexts = ['Front-end Developer', 'Web Developer', 'Continuous Learner'];
 
+                let currentIndex = 0;
+
+                function changeText() {
+                    changingText.textContent = newTexts[currentIndex];
+                    currentIndex = (currentIndex + 1) % newTexts.length;
+                }
+
+                setInterval(changeText, 2000);
+
+            </script>
 
 
             <div id="rightContent">
