--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
                         <p class="name">Achint Tyagi</p>
                         <hr class="nameUnderline">
-                        <h3>Proficient in HTML5, CSS, Bootstrap, and JavaScript. I have an eye for design,
+                        <h3>Proficient in HTML5, CSS, Bootstrap, JavaScript and php. I have an eye for design,
                             creativity,
                             and possess
                             problem-solving skills, adaptability, and learning agility.</h3>
